--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vanilla-extract/parcel-transformer": "^1.0.14",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "prettier": "^3.5.3",
     "typescript": "^5"
   }
 }
