--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.14.0",
+    "clsx": "^2.1.1",
     "next": "^14.2.26",
     "react": "^18",
     "react-dom": "^18"
